 <package>
  <name>robot_treasure_area</name>
  <version>1.0.0</version>
  <description>Computes the area between the robot and the treasure. </description>

  <url type="repository">https://github.com/roboskel/robot_treasure_hunting_viz</url>
  
  <maintainer email="kzam@iit.demokritos.gr">Katerina Zamani</maintainer>
  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>std_msgs</run_depend>

</package>